Fixed card alignment with flex.

--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -1,10 +1,8 @@
 .row {
-    margin: 20px 10px;
-}
-
-.cardBox {
-    margin-bottom: 50px;
-
+  display: -webkit-flex; /* Safari */
+  -webkit-justify-content: center; /* Safari 6.1+ */
+  display: flex;
+  justify-content: center;
 }
 
 .shake {
